--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "get_next_line.c"]
 	path = get_next_line.c
 	url = https://github.com/mazen-tech/get_next_line.c.git
+[submodule "Born2beroot.sh"]
+	path = Born2beroot.sh
+	url = https://github.com/mazen-tech/Born2beroot.sh.git
