--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "minitalk.c"]
 	path = minitalk.c
 	url = https://github.com/mazen-tech/minitalk.c.git
+[submodule "push_swap.c"]
+	path = push_swap.c
+	url = https://github.com/mazen-tech/push_swap.c.git
