--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "so_long.c"]
 	path = so_long.c
 	url = https://github.com/mazen-tech/so_long.c.git
+[submodule "Cpp_models"]
+	path = Cpp_models
+	url = https://github.com/mazen-tech/42-Common_Core.git
